# AthEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.cmd  conanfile.txt  imgui.ini
conan/fmod/: conanfile.py
res/data/: gameplay.cfg
res/models/: test.fbx
res/models/basicShapes/: capsule.fbx  cube.fbx  cylinder.fbx  icoSphere.fbx  plane.fbx  uvSphere.fbx
res/runtime/: startup.cfg
res/scenes/: basic.athscene  hud_ui_test.athscene  inputTest.athscene  shader_showcase_2d.athscene  shader_showcase_3d.athscene
res/shader/: sprite.fs
res/shaders/: lit2D.fs  lit2D.vs  lit3D.fs  lit3D.matmeta  lit3D.vs  lit3d.fs  lit3d.vs  simple.fs  simple.matmeta  simple.vs  sprite.matmeta  sprite.vs  ui_batch.fs  ui_batch.vs  unlit2D.fs  unlit2D.matmeta  unlit2D.vs  unlit3D.matmeta  unlit3D.vs
res/textures/: generated_sprite_sheet.tga
src/: editor_main.cpp  main.cpp  runtime_main.cpp
src/animation2d/: Animation2DLibrary.cpp  Animation2DLibrary.h  SpriteAnimationClip.h  SpriteAnimationSystem.cpp  SpriteAnimationSystem.h  SpriteAnimator.h
src/app/: Application.cpp  Application.h  CrashHandler.cpp  CrashHandler.h  RuntimeApplication.cpp  RuntimeApplication.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/components/: Camera.h  CameraController.h  LightEmitter.h  Material.h  Mesh.h  Parent.h  Spin.h  Sprite.h  Tag.h  Transform.h
src/components/runtime/: RuntimeResources.h
src/components/ui/: Health.h  HealthOscillator.h  HealthUIBinding.h  UIChildAlignment.h  UIComponents.h  UIFill.h  UIGridConstraint.h  UIGridGroup.h  UIHorizontalGroup.h  UILayoutElement.h  UIMask.h  UIPadding.h  UIRect.h  UISpacer.h  UISprite.h  UIText.h  UITransform.h  UIVerticalGroup.h
src/debugviz/: DebugVisualization.cpp  DebugVisualization.h
src/ecs/: Entity.h  Registry.h  SparseSet.h
src/editor/: EditorAssetBrowser.cpp  EditorDebugOverlays.cpp  EditorDebugVisualization.cpp  EditorDockspace.cpp  EditorGizmos.cpp  EditorModules.cpp  EditorModules.h  EditorModulesInternal.h  EditorModulesState.cpp  EditorPanels.cpp  EditorPhysicsDebug.cpp  EditorPhysicsDebugVisualization.cpp  EditorSceneDialogs.cpp  EditorSceneTools.cpp  EditorSceneTools.h  EditorTopBar.cpp  EditorTransformGizmo.cpp  EditorUI.cpp  EditorUI.h  EditorUndoRedo.cpp  EditorViewport.cpp  SceneEditor.cpp  SceneEditor.h  SpriteSheetGeneratorWindow.cpp
src/events/: EventQueue.h  GameplayEvents.h  PhysicsEvents.h  SceneEventBus.h
src/fileManager/: fileManager.cpp  fileManager.h
src/input/: Input.cpp  Input.h  InputActions.h  MouseLookCallbacks.cpp  MouseLookCallbacks.h  ProjectInputMap.cpp  ProjectInputMap.h  WindowContext.h
src/material/: MaterialMetadata.cpp  MaterialMetadata.h
src/physics2d/: Collider2D.h  Physics2D.cpp  Physics2D.h  Physics2DAlgorithms.h  Physics2DSystem.cpp  Physics2DSystem.h  Physics2DWorldState.h  PhysicsBody2D.h  PhysicsEvents.h  RigidBody2D.h
src/platform/: GL.h  GlfwContext.h  PlatformMetrics.cpp  PlatformMetrics.h  Window.cpp  Window.h
src/prefab/: BuiltinPrefabs.cpp  BuiltinPrefabs.h  Prefab.cpp  Prefab.h  PrefabRegistry.cpp  PrefabRegistry.h
src/profiler/: Profiler.cpp  Profiler.h
src/rendering/: MeshFactory.cpp  MeshFactory.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/resources/: ResourceHandle.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
src/scene/: AsyncLoader.h  AthSceneComponentCodecs_Core.cpp  AthSceneComponentCodecs_Physics.cpp  AthSceneComponentCodecs_Render.cpp  AthSceneComponentCodecs_UI.cpp  AthSceneEntityRemapper.cpp  AthSceneIO.cpp  AthSceneIO.h  AthSceneIOInternal.h  AthSceneIOShared.cpp  AthScenePathResolver.cpp  AthSceneReader.cpp  AthSceneWriter.cpp  EditorSceneIO.cpp  EditorSceneIO.h  IEditorScene.h  IScene.h  RuntimeSceneManager.cpp  RuntimeSceneManager.h  Scene.cpp  Scene.h  SceneId.h  SceneManager.cpp  SceneManager.h  SceneRuntime.cpp  SceneRuntime.h
src/scene/scenes/: CoreScene.cpp  CoreScene.h  HudDemoScene.cpp  HudDemoScene.h  LoadingScene.cpp  LoadingScene.h  MultiScene.cpp  MultiScene.h  RuntimeDefaultScene.cpp  RuntimeDefaultScene.h  RuntimeGameScene.cpp  RuntimeGameScene.h  Test2DScene.cpp  Test2DScene.h  Test3DScene.cpp  Test3DScene.h
src/shader/: shader.cpp  shader.fs  shader.h  shader.vs
src/systems/: CameraControllerSystem.cpp  CameraControllerSystem.h  CameraSyncSystem.cpp  CameraSyncSystem.h  ClearColorSystem.cpp  ClearColorSystem.h  GameplayEventProjectionSystem.cpp  GameplayEventProjectionSystem.h  PrimaryCameraSystem.cpp  PrimaryCameraSystem.h  Render2DSystem.cpp  Render2DSystem.h  RenderSystem.cpp  RenderSystem.h  SpinSystem.cpp  SpinSystem.h  TransformSystem.cpp  TransformSystem.h  TriggerZoneConsoleSystem.cpp  TriggerZoneConsoleSystem.h
src/systems/ui/: HealthOscillationSystem.cpp  HealthOscillationSystem.h  HealthUISyncSystem.cpp  HealthUISyncSystem.h  UIInputSystem.cpp  UIInputSystem.h  UILayoutSystem.cpp  UILayoutSystem.h  UIRenderSystem.cpp  UIRenderSystem.h  UISpriteAssetSyncSystem.cpp  UISpriteAssetSyncSystem.h  UITransformSystem.cpp  UITransformSystem.h
src/tools/: SceneValidation.cpp  SceneValidation.h
src/ui/: BitmapFont.cpp  BitmapFont.h
src/utils/: AssetPath.cpp  AssetPath.h  Console.cpp  Console.h  StrictParsing.h  Utils2D.cpp  Utils2D.h
